--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,5 +1,5 @@
 <footer class="footer text-muted bg-light">
-  <div class="container">
-    <span>© <%= Date.today.year %> Your Company</span>
+  <div class="container-fluid">
+    <span>© <%= Date.today.year %> Filip Jerga</span>
   </div>
 </footer>
