--- a/app/views/shared/_notices.html.erb
+++ b/app/views/shared/_notices.html.erb
@@ -1,6 +1,6 @@
 <% flash.each do |msg_type, message| %>
-  <div class="alert <%= bootstrap_class_for(msg_type) %>">
-    <div class="container">
+  <div class="alert-container">
+    <div class="alert <%= bootstrap_class_for(msg_type) %>">
       <button class="close" data-dismiss="alert"><span>×</span></button>
       <%= message %>
     </div>
